--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/color.css" />
+    <script src="./js/all.min.js"></script>
   </head>
   <body>
     <!-- header -->
@@ -97,6 +98,7 @@
         </div>
         <div class="effect effect-6">X</div>
       </div>
+
       <!-- effect wrap end -->
       <div class="container">
         <div class="row full-screen align-items-center">
@@ -117,5 +119,189 @@
       </div>
     </section>
     <!-- home section end -->
+
+    <!-- about section start -->
+    <section class="about-section section">
+      <div class="container">
+        <div class="row">
+          <div class="section-title">
+            <h2 data-heading="main info">About me</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="about-img">
+            <div class="img-box inner-shadow">
+              <img src="./img/avatar.png" alt="photo" class="outer-shadow" />
+            </div>
+          </div>
+          <div class="about-info">
+            <p>
+              <span>Hi! My name is Dat. I am a front-end developer.</span> Lorem
+              ipsum dolor, sit amet consectetur adipisicing elit. Rerum mollitia
+              numquam, laboriosam consequuntur repellendus fuga molestias
+              excepturi modi quam incidunt perspiciatis nostrum labore
+              temporibus, dolore beatae laudantium similique eos fugiat!
+            </p>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Accusamus ipsum ex, sunt dolorem ratione cupiditate animi voluptas
+              rem porro expedita distinctio quis, ad eos amet praesentium fugit
+              beatae dicta accusantium!
+            </p>
+            <a href="cv.pdf" class="btn-1 outer-shadow hover-in-shadow"
+              >Download CV</a
+            >
+            <a href="#" class="btn-1 outer-shadow hover-in-shadow">React Me</a>
+            <hr />
+
+            <!-- social links start -->
+            <div class="social-links">
+              <a href="#" class="outer-shadow hover-in-shadow"
+                ><i class="fab fa-facebook"></i
+              ></a>
+              <a href="#" class="outer-shadow hover-in-shadow"
+                ><i class="fas fa-envelope"></i
+              ></a>
+              <a href="#" class="outer-shadow hover-in-shadow"
+                ><i class="fab fa-twitter-square"></i
+              ></a>
+              <a href="#" class="outer-shadow hover-in-shadow"
+                ><i class="fab fa-telegram"></i
+              ></a>
+              <a href="#" class="outer-shadow hover-in-shadow">
+                <i class="fab fa-youtube"></i
+              ></a>
+            </div>
+            <!-- social links end -->
+          </div>
+        </div>
+
+        <!-- about tabs start -->
+        <div class="row">
+          <div class="about-tabs">
+            <span class="tab-item outer-shadow active" data-target=".skill"
+              >skill</span
+            >
+            <span class="tab-item" data-target=".experience">experience</span>
+            <span class="tab-item" data-target=".education">education</span>
+          </div>
+        </div>
+        <!-- about tabs end -->
+
+        <!-- skills start -->
+        <div class="row">
+          <div class="skills tab-content">
+            <div class="row">
+              <!-- skill item start -->
+              <div class="skill-item">
+                <p>Html</p>
+                <div class="progress inner-shadow">
+                  <div class="progress-bar" style="width: calc(50% - 14px)">
+                    <span>50%</span>
+                  </div>
+                </div>
+              </div>
+              <div class="skill-item">
+                <p>Javascript</p>
+                <div class="progress inner-shadow">
+                  <div class="progress-bar" style="width: calc(50% - 14px)">
+                    <span>50%</span>
+                  </div>
+                </div>
+              </div>
+              <div class="skill-item">
+                <p>Css</p>
+                <div class="progress inner-shadow">
+                  <div class="progress-bar" style="width: calc(50% - 14px)">
+                    <span>50%</span>
+                  </div>
+                </div>
+              </div>
+              <div class="skill-item">
+                <p>ReactJS</p>
+                <div class="progress inner-shadow">
+                  <div class="progress-bar" style="width: calc(50% - 14px)">
+                    <span>50%</span>
+                  </div>
+                </div>
+              </div>
+              <div class="skill-item">
+                <p>Java</p>
+                <div class="progress inner-shadow">
+                  <div class="progress-bar" style="width: calc(50% - 14px)">
+                    <span>50%</span>
+                  </div>
+                </div>
+              </div>
+              <div class="skill-item">
+                <p>SQL Server</p>
+                <div class="progress inner-shadow">
+                  <div class="progress-bar" style="width: calc(50% - 14px)">
+                    <span>50%</span>
+                  </div>
+                </div>
+              </div>
+              <!-- skill item end -->
+            </div>
+          </div>
+        </div>
+        <!-- skills end -->
+
+        <!-- experience start -->
+        <div class="row">
+          <div class="experience tab-content">
+            <div class="row">
+              <div class="timeline">
+                <div class="row">
+                  <!-- timeline item start -->
+                  <div class="timeline-item">
+                    <div class="timeline-item-inner outer-shadow">
+                      <i class="far fa-circle icon"></i>
+                      <span>Sep, 2020</span>
+                      <h3>Fresher</h3>
+                      <h4>FPT Software</h4>
+                      <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Dolor aperiam possimus.
+                      </p>
+                    </div>
+                  </div>
+                  <div class="timeline-item">
+                    <div class="timeline-item-inner outer-shadow">
+                      <i class="far fa-circle icon"></i>
+                      <span>Sep, 2020</span>
+                      <h3>Fresher</h3>
+                      <h4>FPT Software</h4>
+                      <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Dolor aperiam possimus.
+                      </p>
+                    </div>
+                  </div>
+                  <div class="timeline-item">
+                    <div class="timeline-item-inner outer-shadow">
+                      <i class="far fa-circle icon"></i>
+                      <span>Sep, 2020</span>
+                      <h3>Fresher</h3>
+                      <h4>FPT Software</h4>
+                      <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Dolor aperiam possimus.
+                      </p>
+                    </div>
+                  </div>
+                  <!-- timeline item end -->
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- experience end -->
+
+        <!-- education start -->
+        <!-- education end -->
+      </div>
+    </section>
+    <!-- about section end -->
   </body>
 </html>
