--- a/index.html
+++ b/index.html
@@ -327,6 +327,16 @@
                   <div class="timeline-item">
                     <div class="timeline-item-inner outer-shadow">
                       <i class="far fa-circle icon"></i>
+                      <span>Aug 2020 - Oct 2020</span>
+                      <h3>Student</h3>
+                      <h4>Funix University</h4>
+                      <p>Java Web Application.</p>
+                    </div>
+                  </div>
+
+                  <div class="timeline-item">
+                    <div class="timeline-item-inner outer-shadow">
+                      <i class="far fa-circle icon"></i>
                       <span>May 2020 - Sep 2020</span>
                       <h3>Internship</h3>
                       <h4>FPT Software</h4>
@@ -468,11 +478,13 @@
             <div class="portfolio-item-inner outer-shadow">
               <div class="portfolio-item-img">
                 <img
-                  src="./img/avatar.png"
+                  src="./img/resume.png"
                   alt="photo"
                   data-screenshots="./img/avatar.png"
                 />
-                <span class="view-project">view project</span>
+                <a href="https://tienaqq.github.io/resume/">
+                  <span class="view-project">view project</span>
+                </a>
               </div>
               <p class="portfolio-item-title">personal portfolio</p>
 
