--- a/index.html
+++ b/index.html
@@ -483,7 +483,9 @@
                   data-screenshots="./img/avatar.png"
                 />
                 <a href="https://tienaqq.github.io/resume/">
-                  <span class="view-project">view project</span>
+                  <span class="view-project" onclick="show()"
+                    >view project</span
+                  >
                 </a>
               </div>
               <p class="portfolio-item-title">personal portfolio</p>
@@ -626,5 +628,10 @@
     <!-- main.js -->
     <script src="/js/main.js"></script>
     <script src="/js/style-switcher.js"></script>
+    <script>
+      function show() {
+        console.log("ahi");
+      }
+    </script>
   </body>
 </html>
