--- a/index.html
+++ b/index.html
@@ -605,6 +605,52 @@
     </section>
     <!-- contact section end -->
 
+    <!-- footer start -->
+    <div class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="footer-col">
+            <h4>company</h4>
+            <ul>
+              <li><a href="#">about us</a></li>
+              <li><a href="#">our service</a></li>
+              <li><a href="#">privacy policy</a></li>
+              <li><a href="#">affiliate options</a></li>
+            </ul>
+          </div>
+          <div class="footer-col">
+            <h4>get help</h4>
+            <ul>
+              <li><a href="#">PAQ</a></li>
+              <li><a href="#">shipping</a></li>
+              <li><a href="#">returns</a></li>
+              <li><a href="#">order status</a></li>
+              <li><a href="#">payment options</a></li>
+            </ul>
+          </div>
+          <div class="footer-col">
+            <h4>address</h4>
+            <ul>
+              <li><a href="#" class="address">0867677061</a></li>
+              <li><a href="#" class="address">tienaqq@gmail.com</a></li>
+              <li><a href="#" class="address">district 9, Ho Chi Minh</a></li>
+              <li><a href="#" class="address"></a></li>
+            </ul>
+          </div>
+          <div class="footer-col">
+            <h4>Social Network</h4>
+            <div class="social-links">
+              <a href=""><i class="fab fa-facebook"></i></a>
+              <a href=""><i class="fab fa-telegram"></i></a>
+              <a href=""><i class="fab fa-twitter"></i></a>
+              <a href=""><i class="fas fa-envelope-open-text"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- footer end -->
+
     <!-- theme start -->
     <div class="style-switcher outer-shadow">
       <div class="style-switcher-toggler s-icon outer-shadow hover-in-shadow">
